[metadata]
# replace with your username:
name = lambdata_minh
version = 0.0.1
author = Minh Nguyen
author_email = minh14496@gmail.com
description = A collection of Data Science helper function 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/minh14496/lambdata
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft
    Operating System :: MacOS

[options]
packages = find:
python_requires = >=3.8
